Fixed bug #33070 (Improved performance of bzdecompress() by several orders of magnitude).